@@ -29,7 +29,7 @@
       -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true
     </ipv6.server.jvm.args>
     <server.jvm.args>
-        ${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug}
+        ${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.jdk9}
     </server.jvm.args>
   </properties>
 
@@ -251,6 +251,17 @@
                 <server.jvm.args>
                     ${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.jacoco}
                 </server.jvm.args>
+            </properties>
+        </profile>
+        <profile>
+            <id>j9</id>
+            <activation>
+                <jdk>[1.9,)</jdk>
+            </activation>
+            <properties>
+                <jvm.args.jdk9>
+                    --add-exports java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
+                </jvm.args.jdk9>
             </properties>
         </profile>
     </profiles>
